# tsstat

./: LICENSE  README.md  pyproject.toml
src/tsstat/: functions.py  utils.py
